--- a/mode-settings/path-settings.org
+++ b/mode-settings/path-settings.org
@@ -5,6 +5,9 @@
 (use-package
  exec-path-from-shell
  :demand t
+ :init
+ (setq exec-path-from-shell-variables
+       '("PATH" "MANPATH" "OPENAI_API_KEY"))
  :config
  (when (memq window-system '(mac ns x))
    (exec-path-from-shell-initialize)))
