--- a/mode-settings/snippets-settings.org
+++ b/mode-settings/snippets-settings.org
@@ -1,4 +1,5 @@
 * Snippets
+** Yasnippet
 #+PROPERTY: header-args:emacs-lisp
 #+begin_src emacs-lisp :load yes
 (use-package
@@ -21,4 +22,13 @@
  consult-yasnippet
  :after consult
  :config (global-set-key (kbd "M-Y") 'consult-yasnippet))
+#+END_SRC
+** Yasnippet-Capf
+#+begin_src emacs-lisp :load yes
+(use-package!
+ yasnippet-capf
+ :after cape
+ :init
+ (setq yasnippet-capf-lookup-by 'name) ;; Prefer the name of the snippet instead
+ :config (add-to-list 'completion-at-point-functions #'yasnippet-capf))
 #+END_SRC
