--- a/mode-settings/copilot-settings.org
+++ b/mode-settings/copilot-settings.org
@@ -6,9 +6,11 @@
  :straight
  (:host github :repo "zerolfx/copilot.el" :files ("dist" "*.el"))
  :bind
- (:map copilot-completion-map (("M-<return>" . copilot-accept-completion)))
+ (:map
+  copilot-completion-map (("M-<return>" . copilot-accept-completion)))
  :hook (prog-mode . copilot-mode)
  :hook (yaml-mode . copilot-mode)
+ :config (setq copilot-max-char -1)
  :ensure t)
 #+end_src
 ** C3PO
