--- a/mode-settings/tree-sitter-settings.org
+++ b/mode-settings/tree-sitter-settings.org
@@ -10,7 +10,7 @@ This is the old way of using ~tree-sitter~ in emacs. In emacs 29, this moved to 
 #+END_SRC
 ** Combobulate
 Combobulate seems like a cool idea, but I've found it to be more frustrating than helpful in python.
-#+begin_src emacs-lisp :load no
+#+begin_src emacs-lisp :load yes
 (use-package
  combobulate
  :straight '(combobulate :type git :host github :repo "mickeynp/combobulate")
