--- a/mode-settings/flycheck-settings.org
+++ b/mode-settings/flycheck-settings.org
@@ -82,3 +82,42 @@ I have my own little hook to open the flycheck buffer with ~M-C~, and close it a
 
 (define-key flycheck-mode-map (kbd "M-C") 'my/flycheck-list-errors)
 #+end_src
+** Ruff in flycheck
+Credit to [[https://gist.github.com/abo-abo/277d1fe1e86f0e46d3161345f26e8f3a][abo-abo]]
+#+begin_src emacs-lisp :load no
+;; From https://github.com/flycheck/flycheck/issues/1974#issuecomment-1343495202
+(flycheck-define-checker
+ python-ruff
+ "A Python syntax and style checker using the ruff utility.
+  To override the path to the ruff executable, set
+  `flycheck-python-ruff-executable'.
+  See URL `http://pypi.python.org/pypi/ruff'."
+ :command
+ ("ruff" "--format=text"
+  (eval
+   (when buffer-file-name
+     (concat "--stdin-filename=" buffer-file-name)))
+  "-")
+ :standard-input t
+ :error-filter
+ (lambda (errors)
+   (let ((errors (flycheck-sanitize-errors errors)))
+     (seq-map #'flycheck-flake8-fix-error-level errors)))
+ :error-patterns
+ ((warning
+   line-start
+   (file-name)
+   ":"
+   line
+   ":"
+   (optional column ":")
+   " "
+   (id (one-or-more (any alpha)) (one-or-more digit))
+   " "
+   (message (one-or-more not-newline))
+   line-end))
+ :modes (python-mode python-ts-mode))
+
+(eval-after-load 'flycheck
+  '(add-to-list 'flycheck-checkers 'python-ruff))
+#+end_src
