--- a/mode-settings/org-settings.org
+++ b/mode-settings/org-settings.org
@@ -30,6 +30,8 @@
  :config
  (setq org-format-latex-options
        (plist-put org-format-latex-options :scale 2.0))
+ (setq org-latex-create-formula-image-program 'dvisvgm)
+
 
  (org-babel-do-load-languages
   'org-babel-load-languages
@@ -205,6 +207,22 @@ I'm not currently using Org Roam, but maybe some day I'd like to.
 
 ** Org Markdown
 This is really only used in the publishing script of my emacs config, I don't need to load this on every startup.
+
+*** ox-md
 #+begin_src emacs-lisp :load no
 (use-package ox-jekyll-md :init (setq org-jekyll-md-include-yaml-front-matter nil))
+#+end_src
+*** org-jekyll-lite
+This is really only used in the publishing script of my emacs config, I don't need to load this on every startup.
+#+begin_src emacs-lisp :load yes
+(use-package ox-jekyll-lite :ensure t :straight '(ox-jekyll-lite :type git :host github :repo "peterewills/ox-jekyll-lite"))
+#+end_src
+
+* Org Ref
+#+begin_src emacs-lisp :load yes
+(use-package
+ org-ref
+ :config
+ (setq org-latex-pdf-process
+       (list "latexmk -shell-escape -bibtex -f -pdf %f")))
 #+end_src
