click on links in vterm

--- a/mode-settings/term-settings.org
+++ b/mode-settings/term-settings.org
@@ -57,7 +57,9 @@ BUFFER may be either a buffer or its name (a string)."
   vterm-mode-map (kbd "M-k")
   (lambda ()
     (interactive)
-    (kill-buffer-and-its-windows (current-buffer)))))
+    (kill-buffer-and-its-windows (current-buffer))))
+ ;; Add goto-address-mode to vterm-mode-hook
+ (add-hook 'vterm-mode-hook 'goto-address-mode))
 #+end_src
 
 ** Vterm Toggle
